--- a/src/app/ngx-translate/ngx-translate.component.html
+++ b/src/app/ngx-translate/ngx-translate.component.html
@@ -37,7 +37,7 @@
       {{ 'login.auth.wrong' | translate }}
     </mat-error>
     <br/>
-    <div *ngIf="configuration?.maintenance" class="d-flex justify-content-center"
+    <div *ngIf="configurations?.maintenance" class="d-flex justify-content-center"
          style="color: red">
       {{ 'login.maintenance.message' | translate }}
     </div>
